compositing/iframes/layout-on-compositing-change.html can assert under ContentfulPaintChecker https://bugs.webkit.org/show_bug.cgi?id=218204 <rdar://problem/70694218>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/paint-timing/resources/subframe-painting.html:
* web-platform-tests/paint-timing/fcp-only/fcp-ignore-from-subframe.html:
* web-platform-tests/paint-timing/fcp-only/fcp-ignore-from-subframe-expected.txt:
        Added a new test to assert that painting inside iframes is not automatically considered by the parent.
        Upstreamed: https://github.com/web-platform-tests/wpt/pull/26303

Source/WebCore:

Paints from child iframes should not be considered when checking for first-contentful-paint.
The previous w3c test allegedly checking for it was actualy testing something else.

Tests: LayoutTests/imported/w3c/web-platform-tests/paint-timing/fcp-only/fcp-ignore-from-subframe.html.

* rendering/RenderWidget.cpp:
(WebCore::RenderWidget::paint):
        Avoid iframe painting if we're in contentfulness detection fake-paint.


Canonical link: https://commits.webkit.org/230941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269050 268f45cc-cd09-0410-ab3c-d52691b4dbfc